Better stack management of element validation context